# bdilab-rag-hyde

./: .gitignore  README.md  pyproject.toml
src/hyde4lc/: __init__.py  hyde.py  prompts.py
tests/hyde4lc/: gen_test_set.py  test_hyde.py  util_test_hyde.py
tests/hyde4lc/static/: test_set.json
tests/hyde4lc/static/docs/: 孔乙己.txt
tests/mocks/: __init__.py  llm.py  retiever.py
