[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyde4lc"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-openai"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
